--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1043,7 +1043,7 @@ and (min-width : 740px) {
             li {
                 width: 24%;
                 a {
-                    font-size: 14px;
+                    font-size: 13px;
                     padding: 8px 0;
                 }
             }
@@ -1242,7 +1242,8 @@ and (min-width : 740px) {
             }
         }
         .mapOverlay {
-            .bd {
+            .overlay-bd {
+                margin: 0 0 0 7%;
                 width: 80%;
             }
         }
