--- a/src/templates/partials/footer.ejs
+++ b/src/templates/partials/footer.ejs
@@ -2,12 +2,12 @@
     <footer>
         <ul class="line1">
             <% for (var i = 0; i < footer.line1.length; i += 1) { %>
-                <li><%= footer.line1[i] %></li>
+                <li><%- footer.line1[i] %></li>
             <% } %>
         </ul>
         <ul>
             <% for (var i = 0; i < footer.line2.length; i += 1) { %>
-                <li><%= footer.line2[i] %></li>
+                <li><%- footer.line2[i] %></li>
             <% } %>
         </ul>
     </footer>
