Fix popstate in service subpages

--- a/src/templates/partials/header.ejs
+++ b/src/templates/partials/header.ejs
@@ -3,6 +3,11 @@
         <div class="nav">
             <nav>
                 <ul>
+                    <% if (pageName === 'people' || pageName === 'schedule') {
+                        var pageNameOrg = pageName;
+
+                        pageName = 'index';
+                    } %>
                     <% for (var i = 0; i < nav.length; i += 1) { %>
                         <li>
                             <a data-pagename="<%= nav[i].page %>" href="<%= nav[i].url %>"
@@ -12,6 +17,7 @@
                             </a>
                         </li>
                     <% } %>
+                    <% pageName = pageNameOrg; %>
                 </ul>
             </nav>
         </div>
