--- a/src/templates/partials/sidebar.ejs
+++ b/src/templates/partials/sidebar.ejs
@@ -20,7 +20,7 @@
         <% } %>
         <section>
             <div class="bd">
-                <div class="fb-page" data-href="https://www.facebook.com/EdenAnimalHosp/" data-tabs="timeline" data-width="270" data-height="450" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/EdenAnimalHosp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EdenAnimalHosp/">Facebook專頁</a></blockquote></div>
+                <div class="fb-page" data-href="https://www.facebook.com/EdenAnimalHosp/" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/EdenAnimalHosp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EdenAnimalHosp/">Facebook專頁</a></blockquote></div>
             </div>
         </section>
     </aside>
