Add twitter for latest news

--- a/src/templates/partials/scripts.ejs
+++ b/src/templates/partials/scripts.ejs
@@ -10,3 +10,4 @@ ga('send', 'pageview');
 var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=248003741893222";fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
