--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -11,6 +11,15 @@
                     <div class="content">
                         <main>
                             <% include ./partials/content.ejs %>
+                            <section>
+                                <h2>最新消息</h2>
+                                <a
+                                    class="twitter-timeline"
+                                    href="https://twitter.com/Vet_Record"
+                                    data-chrome="noheader noborders noscrollbar"
+                                    data-tweet-limit="5"
+                                >Vet_Record 最新消息</a>
+                            </section>
                         </main>
                     </div>
                     <% include ./partials/sidebar.ejs %>
