Change twitter style

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -16,7 +16,7 @@
                                 <a
                                     class="twitter-timeline"
                                     href="https://twitter.com/Vet_Record"
-                                    data-chrome="noheader noborders noscrollbar"
+                                    data-chrome="noheader nofooter noborders noscrollbar"
                                     data-tweet-limit="5"
                                 >Vet_Record 最新消息</a>
                             </section>
