--- a/src/templates/er.ejs
+++ b/src/templates/er.ejs
@@ -14,7 +14,8 @@
                     <div class="content">
                         <main>
                             <section class="24h">
-                                <h2>急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
+                                <h2 class="er-phone">急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
+                                <h3 class="er-address"><a class="info-mobile" href=""><%= address.info %></a></h3>
                                 <% include ./partials/content.ejs %>
                                 <iframe
                                   frameborder="0"
