--- a/src/less/style.less
+++ b/src/less/style.less
@@ -571,6 +571,7 @@ body {
 }
 .toggle-resume,
 .toggle-article {
+    cursor: pointer;
     color: @color-eden;
     background: none;
     border: 0;
