--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -15,7 +15,7 @@
                                 <h2>最新消息</h2>
                                 <a
                                     class="twitter-timeline"
-                                    href="https://twitter.com/Vet_Record"
+                                    href="https://twitter.com/38edenah"
                                     data-chrome="noheader nofooter noborders noscrollbar"
                                     data-tweet-limit="5"
                                 >Vet_Record 最新消息</a>
