--- a/src/less/style.less
+++ b/src/less/style.less
@@ -492,7 +492,7 @@ body {
         }
     }
     p {
-
+      line-height: 30px;
     }
     section {
         margin: 20px 0 0 0;
@@ -764,11 +764,22 @@ body {
                 p {
                     margin: 0;
                 }
+                .items {
+                    p {
+                        padding: 0 0 18px 0;
+                        text-indent: 15px;
+                        line-height: 32px;
+                    }
+                }
             }
         }
     }
     .items {
         margin: 0 0 10px 0;
+        p {
+          padding: 0 0 15px 10px;
+          text-indent: 10px;
+        }
         li {
             position: relative;
             padding: 0 0 5px 10px;
@@ -979,7 +990,7 @@ and (min-width : 740px) {
                     margin: 0 0 5px 0;
                     text-align: center;
                     a {
-                        font-size: 15px;
+                        font-size: 16px;
                         text-indent: 0;
                         &:after {
                             border-radius: 12px;
@@ -999,7 +1010,7 @@ and (min-width : 740px) {
             border-bottom: 1px solid #ddd;
             margin: 8px 0;
             .select-domain {
-                font-size: 15px;
+                font-size: 16px;
                 display: block;
                 width: 100%;
                 padding: 0;
@@ -1052,11 +1063,11 @@ and (min-width : 740px) {
             }
         }
         .items {
-            font-size: 15px;
+            font-size: 16x;
         }
         .bd {
             p {
-                font-size: 15px;
+                font-size: 16px;
             }
         }
     }
@@ -1194,7 +1205,7 @@ and (min-width : 740px) {
                 border-bottom: 1px solid #ddd;
                 margin: 8px 0;
                 .select-domain {
-                    font-size: 15px;
+                    font-size: 16px;
                     display: block;
                     width: 100%;
                     padding: 0;
@@ -1253,7 +1264,7 @@ and (min-width : 740px) {
                 }
             }
             .items {
-                font-size: 15px;
+                font-size: 16px;
                 li {
                     &:before {
                         position: absolute;
@@ -1262,7 +1273,7 @@ and (min-width : 740px) {
             }
             .bd {
                 p {
-                    font-size: 15px;
+                    font-size: 16px;
                 }
             }
         }
