Use simpler data structure

--- a/src/templates/beyond-dog-cat.ejs
+++ b/src/templates/beyond-dog-cat.ejs
@@ -18,7 +18,7 @@
                                     <h2 class="er-phone">急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
                                     <h3 class="er-address"><a class="info-mobile" href=""><%= address.info %></a></h3>
                                 </div>
-                                <% include ./partials/content.ejs %>
+                                <% include ./partials/content-simple.ejs %>
                                 <%
                                     var doctors = people.content;
                                     var divisionName = '非犬貓';
