--- a/src/templates/er.ejs
+++ b/src/templates/er.ejs
@@ -16,7 +16,7 @@
                             <section class="24h">
                                 <h2 class="er-phone">急診專線：<a href="tel:02-85092579">02-85092579</a></h2>
                                 <h3 class="er-address"><a class="info-mobile" href=""><%= address.info %></a></h3>
-                                <% include ./partials/content.ejs %>
+                                <% include ./partials/content-simple.ejs %>
                                 <iframe
                                   frameborder="0"
                                   src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAf8MO-UPLgMT5_R0IRKYehAo_E7SMjMA8
