--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -10,7 +10,7 @@
                 <div class="body">
                     <div class="content">
                         <main>
-                            <% include ./partials/content.ejs %>
+                            <% include ./partials/content-simple.ejs %>
                             <section>
                                 <h2>最新消息</h2>
                                 <a
