Correct html structure in resume

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -790,7 +790,7 @@ body {
                 content: "• ";
                 font-size: 13px;
                 margin: 0 5px 0 0;
-            };
+            }
         }
     }
 }
