Add related links

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -521,6 +521,12 @@ body {
         width: 100%;
         height: 400px;
     }
+    .links {
+      list-style: disc;
+      color: @color-eden;
+      padding: 0 0 0 18px;
+      font-size: 17px;
+    }
 }
 .subnav {
     width: 100%;
