--- a/src/templates/partials/header.ejs
+++ b/src/templates/partials/header.ejs
@@ -23,8 +23,8 @@
             </nav>
         </div>
         <h1 class="title">
-            <a class="name" href="./"><%= h1.name %></a>
-            <span class="tagline"><%= h1.tagline %></span>
+            <a class="name" href="./">伊甸動物醫院</a>
+            <span class="tagline">台北24小時急診</span>
         </h1>
         <div class="phone">
             <span class="label"><span class="notxt"><%= phone.label %></span></span>
