--- a/src/less/style.less
+++ b/src/less/style.less
@@ -734,7 +734,14 @@ body {
         }
     }
     li {
-        margin: 0 0 3px 0;
+        margin: 0 0 6px 0;
+        .hd {
+            a {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+        }
         .bd {
             display: none;
         }
