--- a/src/templates/partials/head.ejs
+++ b/src/templates/partials/head.ejs
@@ -9,7 +9,7 @@
     <meta property="og:type" content='website' />
     <meta property="og:url" content="http://eden-vet.com" />
     <meta property="og:description" content="<%= page.description %>"/>
-    <meta property="og:image" content="http://eden-vet.com/images/logo.png" />
+    <meta property="og:image" content="http://eden-vet.com/images/thumbnail.png" />
     <meta property="og:site_name" content="<%= page.title %>" />
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="apple-touch-icon" sizes="45x45" href="images/logo.png" />
