Use dynamic image file name

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -356,7 +356,7 @@ body {
         position: relative;
         &:after {
             display: inline;
-            content: "：";
+            content: ":";
             
         };
     }
