--- a/src/templates/divisions.ejs
+++ b/src/templates/divisions.ejs
@@ -92,7 +92,7 @@
                                     </li>
                                 <% } %>
                                 </ul>
-                                <a href="./images/calendar.jpg"><img src="./images/calendar.jpg" /></a>
+                                <a href="./images/<%= calendar %>"><img src="./images/<%= calendar %>" /></a>
                             </section>
                         </main>
                     </div>
