--- a/src/templates/schedule.ejs
+++ b/src/templates/schedule.ejs
@@ -10,7 +10,7 @@
                 <div class="body">
                     <div class="content">
                         <main>
-                            <img src="./images/calendar.jpg" />
+                            <img src="./images/<%= calendar %>" />
                         </main>
                     </div>
                     <% include ./partials/sidebar.ejs %>
