--- a/src/less/style.less
+++ b/src/less/style.less
@@ -572,10 +572,13 @@ body {
         font-size: 0;
         li {
             display: inline-block;
-            width: 25%;
+            width: 23%;
             margin: 0 0 5px 0;
             text-align: center;
             font-size: 16px;
+            &:nth-child(2) {
+                witdh: 31%;
+            }
         }
     }
 }
