--- a/src/templates/er.ejs
+++ b/src/templates/er.ejs
@@ -19,8 +19,7 @@
                                 <% include ./partials/content-simple.ejs %>
                                 <iframe
                                   frameborder="0"
-                                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAf8MO-UPLgMT5_R0IRKYehAo_E7SMjMA8
-                                    &q=place_id:ChIJFwTtdQ-sQjQRDdUv6eFR9Zo&center=25.0801111,121.5499876&zoom=16.25&language=zh-TW" allowfullscreen>
+                                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAlTQcPqMN2mqwT8fEmKGMGG37FEuXtZ-E&q=place_id:ChIJFwTtdQ-sQjQRDdUv6eFR9Zo&center=25.0801111,121.5499876&zoom=16.25&language=zh-TW" allowfullscreen>
                                 </iframe>
                             </section>
                         </main>
